change lecture plan

--- a/1. Основы Python/ДЗ1. Условие.ipynb
+++ b/1. Основы Python/ДЗ1. Условие.ipynb
@@ -9,7 +9,7 @@
     }
    },
    "source": [
-    "# **Задание 1**. Тайна моего имени.\n",
+    "# **Задание 1.** Тайна моего имени.\n",
     "\n",
     "Напишите функцию, где на вход подается ваше ФИО\n",
     "(на русском и с пробельными разделителями) и которая в качестве\n",
@@ -24,7 +24,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "**Задание 2**. Тайна имен однокурсников\n",
+    "**Задание 2.** Тайна имен однокурсников\n",
     "В этом задании нужно использовать список всех однокурсников.\n",
     "Ваша задача вывести:\n",
     "- самое короткое ФИО (без пробелов)\n",
@@ -37,65 +37,66 @@
     "['Базуева Мария Дмитриевна\n",
     "'Бориско Данила Ильич ',\n",
     "'Братков Герман Сергеевич',\n",
-    "#  'Суван-оол Орлан Владимирович',\n",
-    "#  'Валл Федор Викторович',\n",
-    "#  'Гарбузов Иван Константинович',\n",
-    "#  'Евменов Максим Андреевич',\n",
-    "#  'Егорова Анна Сергеевна ',\n",
-    "#  'Едовина Алина Игоревна',\n",
-    "#  'Загарнюк Елизавета Максимовна',\n",
-    "#  'Захаров Алексей Сергееивч',\n",
-    "#  'Калёнов Алексей Аркадьевич',\n",
-    "#  'Карасева Алина Александровна',\n",
-    "#  'Каширин Егор Михайлович',\n",
-    "#  'Косинов Андрей Вячеславович',\n",
-    "#  'Красиков Евгений Владимирович',\n",
-    "#  'Кузьмин Никита Кириллович',\n",
-    "#  'Монгуш Тенгиз Анатольевич',\n",
-    "#  'Мурадян Акоп Араратович',\n",
-    "#  'Наумова Анастасия Юрьевна',\n",
-    "#  'Панчук Александр Сергеевич',\n",
-    "#  'Пашинина Татьяна Викторовна',\n",
-    "#  'Пустоваров Артем Андреевич',\n",
-    "#  'Селезнев Дмитрий Владимирович',\n",
-    "#  'Сидорякин Виталий Дмитриевич',\n",
-    "#  'Филиппов Антон Павлович',\n",
-    "#  'Фрольцов Григорий Максимович',\n",
-    "#  'Хамитов Давид Альбертович',\n",
-    "#  'Хомушку Ганна Алексеевна',\n",
-    "#  'Царева Мария Сергеевна']"
+    " 'Суван-оол Орлан Владимирович',\n",
+    " 'Валл Федор Викторович',\n",
+    " 'Гарбузов Иван Константинович',\n",
+    " 'Евменов Максим Андреевич',\n",
+    " 'Егорова Анна Сергеевна ',\n",
+    " 'Едовина Алина Игоревна',\n",
+    " 'Загарнюк Елизавета Максимовна',\n",
+    " 'Захаров Алексей Сергееивч',\n",
+    " 'Калёнов Алексей Аркадьевич',\n",
+    " 'Карасева Алина Александровна',\n",
+    " 'Каширин Егор Михайлович',\n",
+    " 'Косинов Андрей Вячеславович',\n",
+    " 'Красиков Евгений Владимирович',\n",
+    " 'Кузьмин Никита Кириллович',\n",
+    " 'Монгуш Тенгиз Анатольевич',\n",
+    " 'Мурадян Акоп Араратович',\n",
+    " 'Наумова Анастасия Юрьевна',\n",
+    " 'Панчук Александр Сергеевич',\n",
+    " 'Пашинина Татьяна Викторовна',\n",
+    " 'Пустоваров Артем Андреевич',\n",
+    " 'Селезнев Дмитрий Владимирович',\n",
+    " 'Сидорякин Виталий Дмитриевич',\n",
+    " 'Филиппов Антон Павлович',\n",
+    " 'Фрольцов Григорий Максимович',\n",
+    " 'Хамитов Давид Альбертович',\n",
+    " 'Хомушку Ганна Алексеевна',\n",
+    " 'Царева Мария Сергеевна']"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
    "cell_type": "markdown",
    "source": [
-    "# Задание 3**. Беговая дорожка.\n",
+    "**Задание 3.** Беговая дорожка.\n",
     "\n",
-    "# Когда я занимаюсь на беговой дорожке, меня часто волнует то,\n",
-    "# за какое время я пробегу необходимое количество километров при заданной средней скорости (км в час).\n",
-    "# Ваша задача написать функцию, где на вход подается:\n",
-    "#  - количество километров, которое человек планирует пробежать (целое число от 1 до 40)\n",
-    "#  - средняя скорость, которая задается на беговой дорожке в км/час (целое число от 1 до 20)\n",
-    "#\n",
-    "# Функция должна вывести время (в минутах и секундах) за которое человек пробежит данное количество километров при заданной скорости беговой дорожки.\n",
-    "#\n",
-    "# Пример. Я ставлю себе скорость в 10 км в час. За какое время в минутах и секундах я пробегу 2 км?\n",
+    "Когда я занимаюсь на беговой дорожке, меня часто волнует то,\n",
+    "за какое время я пробегу необходимое количество километров при заданной средней скорости (км в час).\n",
+    "Ваша задача написать функцию, где на вход подается:\n",
+    " - количество километров, которое человек планирует пробежать (целое число от 1 до 40)\n",
+    " - средняя скорость, которая задается на беговой дорожке в км/час (целое число от 1 до 20)\n",
     "\n",
-    "# Задание 4.\n",
-    "# В как можно меньше строчек найти произведение всех простых чисел от 1 до 1000\n",
-    "# (простое число имеет только 2 делителя - 1 и само число)\n",
+    "Функция должна вывести время (в минутах и секундах) за которое человек пробежит данное количество километров при заданной скорости беговой дорожки.\n",
     "\n",
-    "# Задание 5.\n",
-    "# Написать класс, где на вход подается последовательность чисел и в котором реализуются функции:\n",
-    "# факториал наибольшего\n",
-    "# произведение самого большого и маленького\n",
-    "# число у которого больше всех делителей"
+    "Пример. Я ставлю себе скорость в 10 км в час. За какое время в минутах и секундах я пробегу 2 км?\n",
+    "\n",
+    "**Задание 4.**\n",
+    "В как можно меньше строчек найти произведение всех простых чисел от 1 до 1000\n",
+    "(простое число имеет только 2 делителя - 1 и само число)\n",
+    "\n"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   }
  ],
