--- a/10. Версионирование/Лекция 10. Версионирование.ipynb
+++ b/10. Версионирование/Лекция 10. Версионирование.ipynb
@@ -9,19 +9,15 @@
     }
    },
    "source": [
-    "# Основные концепции ООП\n",
+    "# Описание GitHub\n",
     "\n",
-    "## Инкапсуляция\n",
-    "\n",
-    "## Наследование\n",
-    "\n",
-    "## Полиморфизм"
+    "## Создание репозитория"
    ]
   },
   {
    "cell_type": "markdown",
    "source": [
-    "# Структура класса\n"
+    "## Клонирование репозитория"
    ],
    "metadata": {
     "collapsed": false,
@@ -33,9 +29,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Пример структуры класса с основными концепциями\n",
-    "\n",
-    "\n"
+    "# Основные команды GitHub\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -47,7 +41,19 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Защищенные методы и свойства\n",
+    "# Работа с ветками и версиями кода\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# GitHub actions\n",
     "\n"
    ],
    "metadata": {
