--- a/11. Тестирование/Лекция 11. Тестирование.ipynb
+++ b/11. Тестирование/Лекция 11. Тестирование.ipynb
@@ -9,19 +9,13 @@
     }
    },
    "source": [
-    "# Основные концепции ООП\n",
-    "\n",
-    "## Инкапсуляция\n",
-    "\n",
-    "## Наследование\n",
-    "\n",
-    "## Полиморфизм"
+    "# Зачем тестировать?\n"
    ]
   },
   {
    "cell_type": "markdown",
    "source": [
-    "# Структура класса\n"
+    "# Что мы обычно тестируем?\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -33,9 +27,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Пример структуры класса с основными концепциями\n",
-    "\n",
-    "\n"
+    "# Основные пакеты для тестирования"
    ],
    "metadata": {
     "collapsed": false,
@@ -47,7 +39,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Защищенные методы и свойства\n",
+    "# GitHub actions для тестов\n",
     "\n"
    ],
    "metadata": {
