--- a/8. Flask/Лекция 8. Flask.ipynb
+++ b/8. Flask/Лекция 8. Flask.ipynb
@@ -9,19 +9,15 @@
     }
    },
    "source": [
-    "# Основные концепции ООП\n",
+    "# Коротко о фреймворках\n",
     "\n",
-    "## Инкапсуляция\n",
-    "\n",
-    "## Наследование\n",
-    "\n",
-    "## Полиморфизм"
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
    "source": [
-    "# Структура класса\n"
+    "# Основные методы Flask"
    ],
    "metadata": {
     "collapsed": false,
@@ -33,22 +29,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Пример структуры класса с основными концепциями\n",
-    "\n",
-    "\n"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "# Защищенные методы и свойства\n",
-    "\n"
+    "# Подключаем базу данных\n"
    ],
    "metadata": {
     "collapsed": false,
