--- a/12. Внедрение в продакшн/Лекция 12. Внедрение в продакшн.ipynb
+++ b/12. Внедрение в продакшн/Лекция 12. Внедрение в продакшн.ipynb
@@ -1,13 +1,29 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Контейнеры\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Сервера\n",
+    "\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
   }
  ],
  "metadata": {
