--- a/4. Ускорение кода и работа с памятью/Лекция 4. Ускорение работы кода.ipynb
+++ b/4. Ускорение кода и работа с памятью/Лекция 4. Ускорение работы кода.ipynb
@@ -1,15 +1,54 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    },
-   "outputs": [],
    "source": [
-    ""
+    "# Ускорение вычислений\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Работа с памятью\n",
+    "\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Мультипроцессинг и параллелизация"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Ассинхронность\n",
+    "\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
   }
  ],
  "metadata": {
