--- a/5. Дизайн и оформление кода/Лекция 5. Дизайн и оформление кода.ipynb
+++ b/5. Дизайн и оформление кода/Лекция 5. Дизайн и оформление кода.ipynb
@@ -1,13 +1,52 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Основное из pep8\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Основное из Python-дзен"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Правильно оформляем функции\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Правильно оформляем классы"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
   }
  ],
  "metadata": {
