--- a/7. Работа с данными/Лекция 7. Работа с данными.ipynb
+++ b/7. Работа с данными/Лекция 7. Работа с данными.ipynb
@@ -1,15 +1,28 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    },
-   "outputs": [],
    "source": [
-    ""
+    "# Базы данных"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Анализ базы данных в pandas\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
   }
  ],
  "metadata": {
