--- a/9. FastAPI/Лекция 9. FastAPI.ipynb
+++ b/9. FastAPI/Лекция 9. FastAPI.ipynb
@@ -9,19 +9,15 @@
     }
    },
    "source": [
-    "# Основные концепции ООП\n",
+    "# Преимущества FastAPI\n",
     "\n",
-    "## Инкапсуляция\n",
-    "\n",
-    "## Наследование\n",
-    "\n",
-    "## Полиморфизм"
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
    "source": [
-    "# Структура класса\n"
+    "# Создание API\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -33,22 +29,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Пример структуры класса с основными концепциями\n",
-    "\n",
-    "\n"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "# Защищенные методы и свойства\n",
-    "\n"
+    "# Создание сайта"
    ],
    "metadata": {
     "collapsed": false,
