--- a/2. Функциональное программирование/Лекция 2. Функциональное программирование.ipynb
+++ b/2. Функциональное программирование/Лекция 2. Функциональное программирование.ipynb
@@ -28,32 +28,70 @@
     },
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Help on function most_common in module collections:\n",
-      "\n",
-      "most_common(self, n=None)\n",
-      "    List the n most common elements and their counts from the most\n",
-      "    common to the least.  If n is None, then list all element counts.\n",
-      "    \n",
-      "    >>> Counter('abracadabra').most_common(3)\n",
-      "    [('a', 5), ('b', 2), ('r', 2)]\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def sort_list(authors_list):\n",
     "    \"\"\"\n",
     "    Function sorts list of authors along their names \n",
     "    :param authors_list: list of authors with name and surname\n",
     "    :return: sorted list along name\n",
-    "    \"\"\"\n",
-    "    "
+    "    \"\"\""
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Статическая и динамическая типизация\n",
+    "\n",
+    "В статической типизации мы каждой переменной должны задавать тип.\n",
+    "Python - пример динамической типизации, где программа работает без четко заданных типов данных.\n",
+    "\n",
+    "Плюсы динамической типизации:\n",
+    "- быстро пилим код\n",
+    "- быстро редактируем\n",
+    "...\n",
+    "\n",
+    "Минусы динамической типизации:\n",
+    "- при большом количестве кода становится сложно отлавливать ошибку\n",
+    "...\n",
+    "\n",
+    "Начиная с Python 3.4-3.5? ввели элементы статической типизации.\n",
+    "Мы можем по желанию указывать типы переменных, аргументов и типы вывода функции."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "(23, 111)"
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from typing import List, Tuple, Dict, Any\n",
+    "def get_max_lists(list1: List[int], list2: List[int]) -> Tuple[Any, Any]:\n",
+    "    max1 = max(list1)\n",
+    "    max2 = max(list2)\n",
+    "    return max1, max2\n",
+    "get_max_lists([1,23,4, 1], [9,10,111])"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "markdown",
@@ -75,13 +113,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "34\n"
+      "34\n",
+      "10\n"
      ]
     }
    ],
@@ -95,7 +134,15 @@
     "    result = sum(map(lambda x: len(x), args))\n",
     "    return result\n",
     "print(list_of_memes('язь', \"рыбов\", \"коты и наташа\",\n",
-    "              \"николас кейдж\"))"
+    "                    \"николас кейдж\"))\n",
+    "\n",
+    "\n",
+    "def sum_numbers(*args):\n",
+    "    sum_ = sum(args)\n",
+    "    return sum_\n",
+    "\n",
+    "\n",
+    "print(sum_numbers(1, 2, 3, 4))"
    ],
    "metadata": {
     "collapsed": false,
@@ -135,18 +182,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 23,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'язь': 9.5, 'рыбов': 9.9, 'коты и наташа': 8.5, 'николас кейдж': 7.5}\n"
+      "{'язь': 9.5, 'рыбов': 9.9, 'коты и наташа': 8.5, 'николас кейдж': 7.5}\n",
+      "{'a': 0.1, 'b': 0.2}\n"
      ]
     }
    ],
    "source": [
-    "def dict_of_memes(denominator, **kwargs):\n",
+    "def dict_of_memes(denominator: int, **kwargs: Dict) -> Dict:\n",
     "    \"\"\"\n",
     "    Function divide rating of memos on denominator\n",
     "    :param denominator:\n",
@@ -159,7 +207,9 @@
     "print(dict_of_memes(10, **{\"язь\": 95,\n",
     "                           \"рыбов\": 99,\n",
     "                           \"коты и наташа\": 85,\n",
-    "                           \"николас кейдж\": 75}))"
+    "                           \"николас кейдж\": 75}))\n",
+    "# Можно указать просто перечисление аргументов\n",
+    "print(dict_of_memes(10, a=1, b=2))"
    ],
    "metadata": {
     "collapsed": false,
@@ -198,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 26,
    "outputs": [
     {
      "name": "stdout",
@@ -246,14 +296,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 27,
    "outputs": [
     {
      "ename": "SyntaxError",
      "evalue": "non-default argument follows default argument (3173106273.py, line 1)",
      "output_type": "error",
      "traceback": [
-      "\u001B[0;36m  File \u001B[0;32m\"/var/folders/10/4wpn2_y536s4d9p_khr6zgv40000gn/T/ipykernel_56586/3173106273.py\"\u001B[0;36m, line \u001B[0;32m1\u001B[0m\n\u001B[0;31m    def error_example(a, b=10, c):\u001B[0m\n\u001B[0m                      ^\u001B[0m\n\u001B[0;31mSyntaxError\u001B[0m\u001B[0;31m:\u001B[0m non-default argument follows default argument\n"
+      "\u001B[0;36m  File \u001B[0;32m\"/var/folders/10/4wpn2_y536s4d9p_khr6zgv40000gn/T/ipykernel_17378/3173106273.py\"\u001B[0;36m, line \u001B[0;32m1\u001B[0m\n\u001B[0;31m    def error_example(a, b=10, c):\u001B[0m\n\u001B[0m                      ^\u001B[0m\n\u001B[0;31mSyntaxError\u001B[0m\u001B[0;31m:\u001B[0m non-default argument follows default argument\n"
      ]
     }
    ],
@@ -298,6 +348,107 @@
    }
   },
   {
+   "cell_type": "code",
+   "execution_count": 41,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "340"
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Добавим *args, **kwargs\n",
+    "def error_example(a, c, b=10, *args, **kwargs):\n",
+    "    summa = a + b + c\n",
+    "    summa_2 = summa + sum(args)\n",
+    "    summa_3 = summa_2 + kwargs['y'] + kwargs['x']\n",
+    "    return summa_3\n",
+    "error_example(10, 5, 15, 10, y=100, x=200)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Итераторы"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "0 0\n",
+      "1 1\n",
+      "2 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(3):\n",
+    "    print(i)\n",
+    "\n",
+    "for index, element in enumerate(range(3)):\n",
+    "    print(index, element)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = iter(range(10000))\n",
+    "print(next(a))\n",
+    "print(next(a))\n",
+    "print(next(a))\n",
+    "print(next(a))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
    "cell_type": "markdown",
    "source": [
     "# Генераторы\n",
@@ -312,9 +463,72 @@
    }
   },
   {
+   "cell_type": "code",
+   "execution_count": 54,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "10\n",
+      "15\n"
+     ]
+    }
+   ],
+   "source": [
+    "def my_generator():\n",
+    "    yield 5\n",
+    "    yield 10\n",
+    "\n",
+    "\n",
+    "a = my_generator()\n",
+    "print(next(a))\n",
+    "print(next(a))\n",
+    "print(sum(my_generator()))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "374"
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def yield_fibs(limit, seed1=1, seed2=1):\n",
+    "    current = seed1\n",
+    "    previous = seed2\n",
+    "\n",
+    "    while limit > 0:\n",
+    "        limit -= 1\n",
+    "        current, previous = current + previous, current\n",
+    "        yield current\n",
+    "sum(yield_fibs(5))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
    "cell_type": "markdown",
    "source": [
-    "## gen"
+    "## Генератор из кортежа"
    ],
    "metadata": {
     "collapsed": false,
@@ -324,16 +538,317 @@
    }
   },
   {
+   "cell_type": "code",
+   "execution_count": 60,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "499500"
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sum(i for i in range(1000))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "499500"
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sum([i for i in range(1000)])"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Замерим скорость"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 7.06 s, sys: 6.91 s, total: 14 s\n",
+      "Wall time: 18.4 s\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": "4999999950000000"
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "sum([i for i in range(int(1e8))])"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 5.88 s, sys: 142 ms, total: 6.02 s\n",
+      "Wall time: 6.73 s\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": "4999999950000000"
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "sum(i for i in range(int(1e8)))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
    "cell_type": "markdown",
    "source": [
     "# Импорт функций из других модулей\n",
-    "\n",
     "\n"
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "outputs": [],
+   "source": [
+    "from math import pi  # число Пи\n",
+    "from collections import Counter  # позволяет считать частоту вхождений\n",
+    "import os  # модуль, работающий с файлами"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Исключения"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "outputs": [
+    {
+     "ename": "ZeroDivisionError",
+     "evalue": "division by zero",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mZeroDivisionError\u001B[0m                         Traceback (most recent call last)",
+      "\u001B[0;32m/var/folders/10/4wpn2_y536s4d9p_khr6zgv40000gn/T/ipykernel_17378/1455669704.py\u001B[0m in \u001B[0;36m<module>\u001B[0;34m\u001B[0m\n\u001B[0;32m----> 1\u001B[0;31m \u001B[0;36m1\u001B[0m \u001B[0;34m/\u001B[0m \u001B[0;36m0\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m",
+      "\u001B[0;31mZeroDivisionError\u001B[0m: division by zero"
+     ]
+    }
+   ],
+   "source": [
+    "1 / 0"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(<class 'ZeroDivisionError'>, <class 'ArithmeticError'>, <class 'Exception'>, <class 'BaseException'>, <class 'object'>)\n",
+      "--------------------------------------------------\n",
+      "(<class 'TypeError'>, <class 'Exception'>, <class 'BaseException'>, <class 'object'>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import inspect\n",
+    "\n",
+    "print(inspect.getmro(ZeroDivisionError))\n",
+    "print(\"-\"*50)\n",
+    "print(inspect.getmro(TypeError))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "outputs": [
+    {
+     "ename": "ArithmeticError",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mArithmeticError\u001B[0m                           Traceback (most recent call last)",
+      "\u001B[0;32m/var/folders/10/4wpn2_y536s4d9p_khr6zgv40000gn/T/ipykernel_17378/1245561591.py\u001B[0m in \u001B[0;36m<module>\u001B[0;34m\u001B[0m\n\u001B[1;32m      8\u001B[0m     \u001B[0;32mif\u001B[0m \u001B[0mx\u001B[0m \u001B[0;34m==\u001B[0m \u001B[0;36m3\u001B[0m\u001B[0;34m:\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m      9\u001B[0m         \u001B[0;32mraise\u001B[0m \u001B[0mTypeError\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m---> 10\u001B[0;31m \u001B[0mprint\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mf4\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;36m1\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m     11\u001B[0m \u001B[0mprint\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mf4\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;36m2\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m     12\u001B[0m \u001B[0mprint\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mf4\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;36m3\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n",
+      "\u001B[0;32m/var/folders/10/4wpn2_y536s4d9p_khr6zgv40000gn/T/ipykernel_17378/1245561591.py\u001B[0m in \u001B[0;36mf4\u001B[0;34m(x)\u001B[0m\n\u001B[1;32m      3\u001B[0m         \u001B[0;32mreturn\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m      4\u001B[0m     \u001B[0;32mif\u001B[0m \u001B[0mx\u001B[0m \u001B[0;34m==\u001B[0m \u001B[0;36m1\u001B[0m\u001B[0;34m:\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m----> 5\u001B[0;31m         \u001B[0;32mraise\u001B[0m \u001B[0mArithmeticError\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m      6\u001B[0m     \u001B[0;32mif\u001B[0m \u001B[0mx\u001B[0m \u001B[0;34m==\u001B[0m \u001B[0;36m2\u001B[0m\u001B[0;34m:\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m      7\u001B[0m         \u001B[0;32mraise\u001B[0m \u001B[0mSyntaxError\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n",
+      "\u001B[0;31mArithmeticError\u001B[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "def f4(x):\n",
+    "    if x == 0:\n",
+    "        return\n",
+    "    if x == 1:\n",
+    "        raise ArithmeticError()\n",
+    "    if x == 2:\n",
+    "        raise SyntaxError()\n",
+    "    if x == 3:\n",
+    "        raise TypeError()\n",
+    "print(f4(1))\n",
+    "print(f4(2))\n",
+    "print(f4(3))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "division by zero\n",
+      "10\n",
+      "9\n",
+      "8\n",
+      "7\n",
+      "6\n",
+      "5\n",
+      "4\n",
+      "3\n",
+      "2\n",
+      "1\n",
+      "0\n",
+      "-1\n",
+      "-2\n",
+      "-3\n",
+      "-4\n",
+      "-5\n",
+      "-6\n",
+      "-7\n",
+      "-8\n",
+      "-9\n",
+      "-10\n",
+      "-11\n",
+      "-12\n",
+      "-13\n",
+      "-14\n",
+      "-15\n",
+      "-16\n",
+      "-17\n",
+      "-18\n",
+      "-19\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(30):\n",
+    "    try:\n",
+    "        10 / i\n",
+    "    except Exception as e:\n",
+    "        print(i)\n",
+    "        print(e)\n",
+    "    finally:\n",
+    "        print(10 - i)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
     }
    }
   }
