add classic descr

--- a/2. Функциональное программирование/Лекция 2. Функциональное программирование.ipynb
+++ b/2. Функциональное программирование/Лекция 2. Функциональное программирование.ipynb
@@ -67,13 +67,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "outputs": [
     {
      "data": {
       "text/plain": "(23, 111)"
      },
-     "execution_count": 12,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "outputs": [
     {
      "name": "stdout",
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "outputs": [
     {
      "name": "stdout",
@@ -296,14 +296,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "outputs": [
     {
      "ename": "SyntaxError",
      "evalue": "non-default argument follows default argument (3173106273.py, line 1)",
      "output_type": "error",
      "traceback": [
-      "\u001B[0;36m  File \u001B[0;32m\"/var/folders/10/4wpn2_y536s4d9p_khr6zgv40000gn/T/ipykernel_17378/3173106273.py\"\u001B[0;36m, line \u001B[0;32m1\u001B[0m\n\u001B[0;31m    def error_example(a, b=10, c):\u001B[0m\n\u001B[0m                      ^\u001B[0m\n\u001B[0;31mSyntaxError\u001B[0m\u001B[0;31m:\u001B[0m non-default argument follows default argument\n"
+      "\u001B[0;36m  File \u001B[0;32m\"/tmp/ipykernel_174259/3173106273.py\"\u001B[0;36m, line \u001B[0;32m1\u001B[0m\n\u001B[0;31m    def error_example(a, b=10, c):\u001B[0m\n\u001B[0m                      ^\u001B[0m\n\u001B[0;31mSyntaxError\u001B[0m\u001B[0;31m:\u001B[0m non-default argument follows default argument\n"
      ]
     }
    ],
@@ -379,7 +379,10 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Итераторы"
+    "# Итераторы\n",
+    "\n",
+    "***Итерируемый объект*** - объект, чьи всевозможные значения мы можем перебирать.\n",
+    "Например, *range* позволяет нам перебрать все значения внутри конкретного интервала."
    ],
    "metadata": {
     "collapsed": false,
@@ -390,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 2,
    "outputs": [
     {
      "name": "stdout",
@@ -399,6 +402,7 @@
       "0\n",
       "1\n",
       "2\n",
+      "----------------------------------------------------------------------------------------------------\n",
       "0 0\n",
       "1 1\n",
       "2 2\n"
@@ -408,7 +412,7 @@
    "source": [
     "for i in range(3):\n",
     "    print(i)\n",
-    "\n",
+    "print(\"-\"*100)\n",
     "for index, element in enumerate(range(3)):\n",
     "    print(index, element)"
    ],
@@ -420,8 +424,37 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "List comprehension тоже создается как итерируемый объект"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "***Итератор***, в свою очередь, -  это объект, который используется для перебора итерируемого объекта с использованием метода __next__() - метод, который возвращает следующий элемент объекта.\n",
+    "\n",
+    "Обратим внимание, что любой итератор также является итерируемым объектом, но не каждый итерируемый объект является итератором.\n",
+    "Например, список можно итерировать, но список не является итератором.\n",
+    "Итератор может быть создан из итерируемого объекта с помощью функции *iter()*.\n",
+    "Чтобы сделать это возможным, классу объекта необходим либо метод __iter__, который возвращает итератор, либо метод __getitem__ с последовательными индексами, начинающимися с 0."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 3,
    "outputs": [
     {
      "name": "stdout",
@@ -451,9 +484,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Генераторы\n",
-    "\n",
-    "## yield\n"
+    "Итераторы можно применить ко всем объектам, к которым можно применить for i in ..."
    ],
    "metadata": {
     "collapsed": false,
@@ -464,28 +495,157 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Генераторы\n",
+    "\n",
+    "Это тип итераторов, который вы итерируете ровно 1 раз. Генераторы не хранят в памяти все итерируемые значения в объекте и генерируют значения \"налету\".\n",
+    "\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5\n",
-      "10\n",
-      "15\n"
+      "0\n",
+      "1\n",
+      "4\n"
      ]
     }
    ],
    "source": [
-    "def my_generator():\n",
-    "    yield 5\n",
-    "    yield 10\n",
+    "mygenerator = (x*x for x in range(3))\n",
+    "for i in mygenerator:\n",
+    "    print(i)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "По сути мы вместо [] используем (). Также мы не можем пройтись по всему циклу дважды, поскольку генераторы могут быть использованы только 1 раз.\n",
+    "Он выдаст 0, забудет об этом и затем выдаст 1 и в конце - 4.\n",
+    "Соответственно, генераторы помогают экономить память."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## yield\n",
     "\n",
+    "*yield* - это некий аналог return в функции\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<generator object create_generator at 0x7f95380b40b0>\n",
+      "0\n",
+      "1\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "def create_generator():\n",
+    "    mylist = range(3)\n",
+    "    for i in mylist:\n",
+    "        yield i*i\n",
+    "mygenerator = create_generator() # create a generator\n",
+    "print(mygenerator) # mygenerator is an object!\n",
+    "for i in mygenerator:\n",
+    "    print(i)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Это довольно бесполезный пример, поскольку функция простая. Однако в сложных функциях мы можем явно указывать, какие значения нам нужно выводить только 1 раз."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'function' object is not an iterator",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mTypeError\u001B[0m                                 Traceback (most recent call last)",
+      "\u001B[0;32m/tmp/ipykernel_174259/3144279657.py\u001B[0m in \u001B[0;36m<module>\u001B[0;34m\u001B[0m\n\u001B[1;32m      4\u001B[0m \u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m      5\u001B[0m \u001B[0mmy_generator\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mrange\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;36m100\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m----> 6\u001B[0;31m \u001B[0mnext\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mmy_generator\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m      7\u001B[0m \u001B[0;31m# for i in range(100):\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m      8\u001B[0m \u001B[0;31m#     a = my_generator(i)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n",
+      "\u001B[0;31mTypeError\u001B[0m: 'function' object is not an iterator"
+     ]
+    }
+   ],
+   "source": [
+    "def my_generator(i):\n",
+    "    yield i / 2\n",
+    "    yield i * 100\n",
     "\n",
-    "a = my_generator()\n",
-    "print(next(a))\n",
-    "print(next(a))\n",
-    "print(sum(my_generator()))"
+    "my_generator(range(100))\n",
+    "a = \n",
+    "# for i in range(100):\n",
+    "#     a = my_generator(i)\n",
+    "#     print(next(a))\n",
+    "# print(next(a))\n",
+    "# print(sum(my_generator()))"
    ],
    "metadata": {
     "collapsed": false,
