add OOP exercise

--- a/3. Объектно-ориентированное программирование/Лекция 3. Объектно-ориентированное программирование.ipynb
+++ b/3. Объектно-ориентированное программирование/Лекция 3. Объектно-ориентированное программирование.ipynb
@@ -221,8 +221,19 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Защищенные методы и свойства\n",
-    "\n"
+    "# Защищенные методы и свойства\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## @classmethod"
    ],
    "metadata": {
     "collapsed": false,
