add comprehension exercises

--- a/1. Основы Python/Comprehension.ipynb
+++ b/1. Основы Python/Comprehension.ipynb
@@ -77,6 +77,58 @@
      "name": "#%% md\n"
     }
    }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# 7. Create a dictionary from the list with same key:value pairs, such as: {\"key\": \"key\"}.\n",
+    "lst=[\"NY\", \"FL\", \"CA\", \"VT\"]"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# 8. First, create a range from 100 to 160 with steps of 10.\n",
+    "# Second, using dict comprehension, create a dictionary where each number in the range is the key and each item divided by 100 is the value."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# 9. Using dict comprehension and a conditional argument create a dictionary from the current dictionary where only the key:value pairs with value above 2000 are taken to the new dictionary.\n",
+    "\n",
+    "dict1={\"NFLX\":4950,\"TREX\":2400,\"FIZZ\":1800, \"XPO\":1700}"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ],
  "metadata": {
