add lection 3 theme

--- a/3. Объектно-ориентированное программирование/Лекция 3. Объектно-ориентированное программирование.ipynb
+++ b/3. Объектно-ориентированное программирование/Лекция 3. Объектно-ориентированное программирование.ipynb
@@ -233,7 +233,191 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## @classmethod"
+    "## @staticmethod\n",
+    "\n",
+    "Используется для создания метода, который ничего не знает о классе или экземпляре.\n",
+    "Получает переданные аргументы без неявного первого аргумента и\n",
+    "его определение неизменяемо через наследование.\n",
+    "\n",
+    "Другими словами, *@staticmethod* — это вроде обычной функции, определенной внутри класса,\n",
+    "которая не имеет доступа к экземпляру, поэтому ее можно вызывать без создания экземпляра класса.\n",
+    "\n",
+    "\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "static method called\n",
+      "static method called\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Синтаксис\n",
+    "class ClassName:\n",
+    "    @staticmethod\n",
+    "    def method_name(arg1, arg2):  ## видим, что аргумент self отсутствует\n",
+    "        ...\n",
+    "\n",
+    "# Пример\n",
+    "class MyClass():\n",
+    "    @staticmethod\n",
+    "    def staticmethod():\n",
+    "        print('static method called')\n",
+    "myclass = MyClass()\n",
+    "assert myclass.staticmethod() == MyClass().staticmethod()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Статический метод помогает в достижении инкапсуляции в классе,\n",
+    "поскольку он не знает о состоянии текущего экземпляра (чему равны атрибуты класса на данный момент, например).\n",
+    "Кроме того, статические методы делают код более читабельным и повторно используемым,\n",
+    "а также более удобным для импорта по сравнению с обычными функциями,\n",
+    "поскольку каждую функцию не нужно отдельно импортировать."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "True"
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class Person():\n",
+    "    @staticmethod\n",
+    "    def is_adult(age):\n",
+    "        if age > 18:\n",
+    "            return True\n",
+    "        else:\n",
+    "            return False\n",
+    "Person.is_adult(23)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Classmethod\n",
+    "\n",
+    "*@classmethod* — это метод, который получает класс в качестве неявного первого аргумента,\n",
+    "точно так же, как обычный метод экземпляра получает экземпляр.\n",
+    "Это означает, что вы можете использовать класс и его свойства внутри этого метода,\n",
+    "а не конкретного экземпляра.\n",
+    "\n",
+    "Другими словами, @classmethod — это обычный метод класса, имеющий доступ ко всем атрибутам класса,\n",
+    "через который он был вызван. Следовательно, *@classmethod* — это метод, который привязан к классу,\n",
+    "а не к экземпляру класса."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# Синтаксис\n",
+    "class Class:\n",
+    "    @classmethod\n",
+    "    def method(cls, arg1, arg2):\n",
+    "        ..."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "В данному случае декоратор *@classmethod* используется для создания методов класса,\n",
+    "а cls должен быть первым аргументом каждого метода класса."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Class method called\n"
+     ]
+    }
+   ],
+   "source": [
+    "class MyClass:\n",
+    "    @classmethod\n",
+    "    def classmethod(cls):\n",
+    "        print('Class method called')\n",
+    "MyClass.classmethod()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "*@classmethod* используется, когда вам нужно получить методы,\n",
+    "не относящиеся к какому-либо конкретному экземпляру,\n",
+    "но тем не менее, каким-то образом привязанные к классу. Самое интересное в них то,\n",
+    "что их можно переопределить дочерними классами. Соответственно, если вы хотите получить доступ к свойству класса в целом, а не к свойству конкретного экземпляра этого класса,\n",
+    "можно использовать *@classmethod*."
    ],
    "metadata": {
     "collapsed": false,
