add oop exercises

--- a/3. Объектно-ориентированное программирование/Лекция 3. Объектно-ориентированное программирование.ipynb
+++ b/3. Объектно-ориентированное программирование/Лекция 3. Объектно-ориентированное программирование.ipynb
@@ -272,7 +272,7 @@
     "        ...\n",
     "\n",
     "# Пример\n",
-    "class MyClass():\n",
+    "class MyClass:\n",
     "    @staticmethod\n",
     "    def staticmethod():\n",
     "        print('static method called')\n",
@@ -316,7 +316,7 @@
     }
    ],
    "source": [
-    "class Person():\n",
+    "class Person:\n",
     "    @staticmethod\n",
     "    def is_adult(age):\n",
     "        if age > 18:\n",
@@ -418,6 +418,224 @@
     "но тем не менее, каким-то образом привязанные к классу. Самое интересное в них то,\n",
     "что их можно переопределить дочерними классами. Соответственно, если вы хотите получить доступ к свойству класса в целом, а не к свойству конкретного экземпляра этого класса,\n",
     "можно использовать *@classmethod*."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Исключения в классах\n",
+    "\n",
+    "Вспомним как мы используем исключения"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Делить на 0 нельзя\n",
+      "1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "a, b = 1, 0\n",
+    "try:\n",
+    "    # Пытаемся выполнить код\n",
+    "    c = a / b\n",
+    "    print(c)\n",
+    "except ZeroDivisionError: # здесь ZeroDivisionError - тип исключения (о них как раз позже)\n",
+    "    print(\"Делить на 0 нельзя\")\n",
+    "    # Идем сюда, если предыдущая строчка выдала ошибку\n",
+    "finally:\n",
+    "    # Идем сюда в независимости от того, что произошло выше\n",
+    "    print(a / (b + 1))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Стандартные исключения мы наследуем из класса BaseException или Exception.\n",
+    "Давайте попробуем кастомизировать этот класс под свои цели."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "outputs": [
+    {
+     "ename": "ZeroDivisionError",
+     "evalue": "division by zero",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mZeroDivisionError\u001B[0m                         Traceback (most recent call last)",
+      "\u001B[0;32m/tmp/ipykernel_82182/2737341494.py\u001B[0m in \u001B[0;36m<module>\u001B[0;34m\u001B[0m\n\u001B[0;32m----> 1\u001B[0;31m \u001B[0;36m1\u001B[0m \u001B[0;34m/\u001B[0m \u001B[0;36m0\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m",
+      "\u001B[0;31mZeroDivisionError\u001B[0m: division by zero"
+     ]
+    }
+   ],
+   "source": [
+    "1 / 0"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "outputs": [
+    {
+     "ename": "BalanceError",
+     "evalue": "Баланс не может быть отрицательным",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mBalanceError\u001B[0m                              Traceback (most recent call last)",
+      "\u001B[0;32m/tmp/ipykernel_82182/2565733201.py\u001B[0m in \u001B[0;36m<module>\u001B[0;34m\u001B[0m\n\u001B[1;32m      8\u001B[0m         \u001B[0;32melse\u001B[0m\u001B[0;34m:\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m      9\u001B[0m             \u001B[0mself\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mname\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mself\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mbalance\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0mname\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mbalance\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m---> 10\u001B[0;31m \u001B[0mCustomer\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m\"Igor\"\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0;34m-\u001B[0m\u001B[0;36m55\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m",
+      "\u001B[0;32m/tmp/ipykernel_82182/2565733201.py\u001B[0m in \u001B[0;36m__init__\u001B[0;34m(self, name, balance)\u001B[0m\n\u001B[1;32m      5\u001B[0m     \u001B[0;32mdef\u001B[0m \u001B[0m__init__\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mself\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mname\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mbalance\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m:\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m      6\u001B[0m         \u001B[0;32mif\u001B[0m \u001B[0mbalance\u001B[0m \u001B[0;34m<\u001B[0m \u001B[0;36m0\u001B[0m\u001B[0;34m:\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m----> 7\u001B[0;31m             \u001B[0;32mraise\u001B[0m \u001B[0mBalanceError\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m\"Баланс не может быть отрицательным\"\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m      8\u001B[0m         \u001B[0;32melse\u001B[0m\u001B[0;34m:\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m      9\u001B[0m             \u001B[0mself\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mname\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mself\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mbalance\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0mname\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mbalance\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n",
+      "\u001B[0;31mBalanceError\u001B[0m: Баланс не может быть отрицательным"
+     ]
+    }
+   ],
+   "source": [
+    "class BalanceError(Exception):\n",
+    "    pass\n",
+    "\n",
+    "class Customer:\n",
+    "    def __init__(self, name, balance):\n",
+    "        if balance < 0:\n",
+    "            raise BalanceError(\"Баланс не может быть отрицательным\")\n",
+    "        else:\n",
+    "            self.name, self.balance = name, balance\n",
+    "Customer(\"Igor\", -55)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Теперь мы будем пытаться отловить ошибку в коде при помощи исключения."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'three'",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mKeyError\u001B[0m                                  Traceback (most recent call last)",
+      "\u001B[0;32m/tmp/ipykernel_82182/1320767710.py\u001B[0m in \u001B[0;36m<module>\u001B[0;34m\u001B[0m\n\u001B[0;32m----> 1\u001B[0;31m \u001B[0mdict_\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mpop\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m\"three\"\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m",
+      "\u001B[0;31mKeyError\u001B[0m: 'three'"
+     ]
+    }
+   ],
+   "source": [
+    "dict_.pop(\"three\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "outputs": [],
+   "source": [
+    "try:\n",
+    "    cust = Customer(\"Igor\", -5500)\n",
+    "except BalanceError as e:\n",
+    "    st = Customer(\"Igor\", 500)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Внешние и частные аттрибуты и методы\n",
+    "\n",
+    "### Внутренние аттрибуты\n",
+    "obj._att_name, obj._method_name():\n",
+    "\n",
+    "- начинаются с одного нижнего подчеркивания\n",
+    "- не являются частью публичного API\n",
+    "- со стороны пользователя класса - \"не трогать!\"\n",
+    "- со стороны разработчика класса - вспомогательная функция\n",
+    "\n",
+    "\n",
+    "### Псевдочастные аттрибуты\n",
+    "obj.__att_name, obj.__method_name():\n",
+    "\n",
+    "- два нижних подчеркивания\n",
+    "- нельзя наследовать\n",
+    "- интерпретируется как obj._MyClass__attr_name\n",
+    "- используется для предотвращения одинаковых имен в наследуемых классах"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Properties"
    ],
    "metadata": {
     "collapsed": false,
