--- a/3. Объектно-ориентированное программирование/Лекция 3. Объектно-ориентированное программирование.ipynb
+++ b/3. Объектно-ориентированное программирование/Лекция 3. Объектно-ориентированное программирование.ipynb
@@ -635,7 +635,54 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## Properties"
+    "## Properties\n",
+    "\n",
+    "Со стороны юзера используем метод как атрибут\n",
+    "\n",
+    "Со стороны разработчика даем управление доступа\n",
+    "и"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "class Employer:\n",
+    "    def __init__(self, name, new_salary):\n",
+    "        self._salary = new_salary  # Создаем защищенный аттрибут\n",
+    "\n",
+    "    @property  # Создаем property метод, где название метода совпадает в точности с внутренним аттрибутом\n",
+    "    def salary(self):\n",
+    "        return self._salary\n",
+    "\n",
+    "    @salary.setter  # Используем @attr.setter перед методом к внутреннему аттрибуту, который изменит значение аттрибута на аргумент из метода\n",
+    "    def salary(self, new_salary):\n",
+    "        if new_salary < 0:\n",
+    "            raise ValueError(\"Invalid salary\")\n",
+    "        self._salary = new_salary"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Если не добавить *@attr.setter*, то аттрибут будет только для чтения\n",
+    "\n",
+    "Если добавить  *@attr.getter*, то метод можно будет вызвать, когда аттрибуту будет присвоено какое-то значение\n",
+    "\n",
+    "Если добавить *@attr.deleter@*, то метод можно будет вызывать, когда мы удалим аттрибут"
    ],
    "metadata": {
     "collapsed": false,
